--- a/week5-inputs/infinite-regen/index.html
+++ b/week5-inputs/infinite-regen/index.html
@@ -6,13 +6,11 @@
         <link rel="stylesheet" href="mystyle.css">   
     </head>  
 
-<body onmousemove="moveMe(event);">
+<body">
 
-    <input type="submit" id="tracker" onclick="createShamConsultation(event);">  
+    <input type="submit" id="tracker">  
   
-  
-    <div id="home">                   
-    </div>     
+    <div id="home">  </div>     
 
     <script src="mycode.js"></script>    
 
